feat(0001) aplicação funcional rodando e aplicada na Playstore

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,7 @@
     <string name="general_cancel">Cancelar</string>
     <string name="general_error">Algo deu errado</string>
     <string name="general_try_again">Tentar novamente</string>
+    
+    <string name="desc_phone">Telefone</string>
+    <string name="desc_camera">Câmera</string>
 </resources>
